<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_5_dip"
        >
        <TextView 
            android:text="@string/vip_left"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
        <TextView 
           android:id="@+id/tv_count"
           android:textColor="#f00"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
        <TextView 
            android:text="@string/vip_right"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
        <TextView 
            android:visibility="gone"
            android:id="@+id/tv_more"
            android:textColor="#3dafea"
            android:text="@string/vip_more"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            />
    </LinearLayout>
    <!-- 	会员单位列表 -->
    <LinearLayout 
        android:id="@+id/ll_vip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_5_dip"
        >
        <GridView 
            android:id="@+id/gv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="5"
            ></GridView>
    </LinearLayout>
</LinearLayout>
