<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F4" >

    <!-- 标题 -->

    <include
        android:id="@+id/ic_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        layout="@layout/activity_title" />

    <!-- 手机号码 -->

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ic_title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_left"
            android:textColor="#000000"
            android:textSize="@dimen/small_middle_text_size" />

        <TextView
            android:id="@+id/tv_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_left"
            android:textColor="#f00"
            android:textSize="@dimen/small_middle_text_size" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_center"
            android:text="@string/phone_right"
            android:textColor="#000000"
            android:textSize="@dimen/small_middle_text_size" />
    </RelativeLayout>

    <!-- 验证码 -->

    <RelativeLayout
        android:id="@+id/rl_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_phone"
        android:layout_marginTop="15dp"
        android:background="@drawable/goods_list_border" >

        <TextView
            android:id="@+id/fp_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/code_name"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/fp_ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/fp_phone"
            android:background="@null"
            android:hint="@string/ed_phone"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="@dimen/small_text_size"
            android:textCursorDrawable="@null"
             />

        <Button
            android:id="@+id/change_time"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/bt_background"
            android:clickable="false"
            android:text="@string/get_code"
            android:textColor="#ffffff"
            android:textSize="@dimen/small_text_size" />
    </RelativeLayout>
    <!-- 下一步 -->

    <ImageView
        android:id="@+id/iv_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_code"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/next_step" />

</RelativeLayout>