<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F4" >

    <!-- 标题 -->

    <include
        android:id="@+id/ic_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        layout="@layout/activity_title" />
    <!-- 手机号 -->

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_80_dip"
        android:layout_below="@+id/ic_title"
        android:layout_marginTop="20dp"
        android:background="@drawable/goods_list_border" >

        <TextView
            android:id="@+id/fp_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/user_phone"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/fp_ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/fp_phone"
            android:background="@null"
            android:hint="@string/fp_phone"
            android:singleLine="true"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/small_text_size"
            android:inputType="number" />
    </RelativeLayout>
    <!-- 验证码 -->

    <RelativeLayout
        android:id="@+id/rl_code"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_80_dip"
        android:layout_below="@+id/rl_phone"
        android:background="@drawable/goods_list_border" >

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/code_name"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/ed_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/tv_code"
            android:background="@null"
            android:hint="@string/ed_code_name"
            android:singleLine="true"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:inputType="number"
            android:textSize="@dimen/small_text_size" />
        
        <ImageView
            android:id="@+id/register_code_bitmap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
             />
    </RelativeLayout>
    <!-- 验证码 -->

    <RelativeLayout
        android:id="@+id/rl_sms"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_80_dip"
        android:layout_below="@+id/rl_code"
        android:layout_marginTop="15dp"
        android:background="@drawable/goods_list_border"
        android:visibility="invisible"
         >

        <TextView
            android:id="@+id/tv_sms_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/code_name"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/tv_sms_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/tv_sms_name"
            android:background="@null"
            android:hint="@string/ed_phone"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/small_text_size" />

        <Button
            android:id="@+id/change_time"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/bt_background"
            android:clickable="false"
            android:text="@string/get_code"
            android:textColor="#ffffff"
            android:textSize="@dimen/small_text_size" />
    </RelativeLayout>
    <!-- 下一步 -->

    <ImageView
        android:id="@+id/iv_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_sms"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/next_step" />

    <ProgressBar
        android:id="@+id/pb_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" 
        android:visibility="invisible"/>

</RelativeLayout>